--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav-buttons">
                 <button id="lang-btn" class="btn"><img id="lang" width="15" src="assets/language.svg"
                         alt=""><span>English</span><img src="assets/arrow.svg" alt=""></button>
-                <button class="btn btn-red-sm">Sign in</button>
+                <button class="btn btn-red-sm"><a href="login.html">Sign in</a></button>
             </div>
         </nav>
         <div class="box"></div>
